--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -24,3 +24,8 @@ $contactinfo-text: #8c8c8c
 // ----------------------------------------
 
 $main-font: "Open Sans", Arial, Helvetica, sans-serif
+
+// ----------------------------------------
+
+$tablet-width: 768px
+$desktop-width: 950px
