--- a/src/sass/_base.sass
+++ b/src/sass/_base.sass
@@ -6,11 +6,10 @@
 ul, ol
 	list-style: none
 
-
 a, a:link, a:hover, a:active
 	text-decoration: none
 
-.button 
+button, .button
     background: none
     border: none
     cursor: pointer
