--- a/src/sass/index/blocks/common.sass
+++ b/src/sass/index/blocks/common.sass
@@ -1,13 +1,31 @@
-.container 
-	padding: 0 130px
-	width: 100%
-	height: 100%
+.container
+    height: 100%
+    width: 100%
+    max-width: 940px
+    margin: 0 auto
+    padding: 0 10px
+
+// @media screen and ( max-width: $desktop-width )
+
+//     .container
+//         max-width: 900px
+
+
+// @media screen and ( max-width: $tablet-width: 768px )
+    
+    
     
 // ----------------------------------------
     
 .page-header, .page-main, .page-footer
-	width: 1200px
-	margin: 0 auto
+    width: 100vw
+    max-width: 100%
+    margin: 0 auto
+
+// ----------------------------------------    
+
+// .page-header, .section-menu, .section-about, .section-services, .section-quote, .section-team, .section-portfolio, .section-contacts, .page-footer
+//     padding: 0 10px
 
 // ----------------------------------------    
     
