--- a/src/sass/index/blocks/header.sass
+++ b/src/sass/index/blocks/header.sass
@@ -1,9 +1,10 @@
 .page-header 
     height: 590px
     background-color: $main-bg
+    padding-top: 65px
+    position: relative
 
 .page-header__container
-    position: relative
     display: flex
 
 // ----------------------------------------
@@ -14,7 +15,6 @@
     flex-flow: column
 
 .info__title
-    margin-top: 65px
     display: inline
     display: flex
     align-items: flex-end
@@ -22,7 +22,6 @@
 
 .title__text
     margin-right: 10px
-    margin-left: -7px
     color: $bg-light
     font-size: 100px
     font-weight: 900
@@ -30,7 +29,6 @@
     text-shadow: 3px 4px 0 rgba(10, 12, 12, 0.1)
 
 .info__name
-    margin-left: -5px
     text-shadow: 3px 4px 0 rgba(10, 12, 12, 0.1)
     color: $bg-light
     font-size: 54px
@@ -38,7 +36,6 @@
     text-transform: uppercase
 
 .info__creator
-    margin-left: -4px
     text-shadow: 2px 4px 0 rgba(10, 12, 12, 0.1)
     color: $bg-light
     font-size: 34px
@@ -93,6 +90,7 @@
     line-height: 22px
     font-weight: 700
 
+
 // ----------------------------------------
 
 .arrows
@@ -118,3 +116,22 @@
     &:nth-child(3)
         background-image: url('../img/icons/Arrow.svg')
         
+
+// ----------------------------------------
+
+
+@media screen and ( max-width: $desktop-width )
+
+    .note 
+        width: 310px
+        height: 65px
+        padding-top: 9px
+        padding-right: 100px
+        top: 0
+
+        &::before
+            border-bottom: 65px solid $Rechthoek
+            transform: scale(1, -1)
+            right: 310px
+
+
