--- a/src/sass/index/blocks/portfolio.sass
+++ b/src/sass/index/blocks/portfolio.sass
@@ -1,13 +1,15 @@
-.portfolio__container
-    box-sizing: content-box
-    padding: 0
+.section-portfolio
+    padding-top: 58px
+    z-index: 99
     
 // ----------------------------------------
 
-.filter
+.portfolio__filter
     display: flex
-    justify-content: center
+    justify-content: space-between
+    margin: 0 auto
     margin-top: 41px
+    max-width: 450px
 
 .filter__item
     color: $filter
@@ -19,60 +21,88 @@
 
     &:hover
         color: $title
-
-    &:not(:first-child)
-        margin-left: 43px
     
 
 // ----------------------------------------
 
 .portfolio__list
+    margin: 0 auto
     margin-top: 50px
-    display: flex
-    flex-flow: wrap
-    width: 1200px
-    height: 502px
+
+.portfolio-wrapper
+    max-width: 1200px
+    margin: 0 auto
 
 .portfolio__item
     width: 300px
     height: 251px
+    position: relative
+    cursor: pointer
+    background: #000
 
 .portfolio__link
-    display: flex
-    justify-content: center
-    align-items: center
-    flex-flow: column
+    cursor: pointer
+
+.portfolio__img
+    width: 100%
+    height: 100%
 
 // ----------------------------------------
 
-.portfolio__item
-    &:nth-child(1)
-        background-color: $light-bg
-    &:nth-child(2)
-        background-color: $main-bg
-    &:nth-child(3)
-        background-color: $light-bg
-    &:nth-child(4)
-        background-color: $main-bg
-    &:nth-child(6)
-        background-color: $light-bg
-    &:nth-child(5)
-        background-color: $main-bg
-    &:nth-child(8)
-        background-color: $light-bg
-    &:nth-child(7)
-        background-color: $main-bg
+.portfolio__item_hover
+    position: absolute
+    left: 50%
+    top: 50%
+    transform: translate(-50%, -50%)
+    text-align: center
+    display: flex
+    flex-flow: column
+    justify-content: center
+    align-items: center
+    opacity: 0
+    
+.portfolio__link:hover .portfolio__img
+    opacity: 0.5
+    transition: 0.5s
 
-.portfolio__img
-    margin-top: 67px
-    margin-bottom: 23px
+.portfolio__link:hover .portfolio__item_hover
+    opacity: 1
+    transition: 0.5s
+
 
 .portfolio__text
     color: $bg-light
     font-size: 18px
     font-weight: 700
     margin-bottom: 3px
+    margin-top: 15px
 
 .portfolio__span
     color: $bg-light
     font-size: 16px
+
+
+// ----------------------------------------
+
+
+@media screen and ( max-width: $tablet-width )
+
+    .portfolio__filter
+        flex-flow: column
+        align-items: center
+        justify-content: center
+        margin-top: 20px
+
+    .filter__item
+        padding-bottom: 10px
+
+    // ----------------------------------------
+
+    .portfolio__list
+        margin-top: 20px
+
+    .portfolio__item
+        width: 200px
+        height: 167px
+
+    
