--- a/src/sass/index/blocks/quote.sass
+++ b/src/sass/index/blocks/quote.sass
@@ -1,5 +1,6 @@
 .quote
     background-color: $second-bg
+    width: 100%
     
 .quote__container
     padding-top: 73px
@@ -9,38 +10,42 @@
     align-items: center
 
 .quote__text
-    width: 755px
+    max-width: 755px
     text-align: center
     color: $bg-light
     font-size: 21px
     line-height: 28px
+
+.quote__quotes
     position: relative
 
-    &::before 
-        content: "“"
-        position: absolute
-        width: 60px
-        height: 55px
-        left: -60px
-        top: 24px
-        opacity: 0.2
-        color: $bg-light
-        font-size: 179px
-        font-weight: 400
-        line-height: 28px
+    &:nth-of-type(1)
+        &::before 
+            content: "“"
+            position: absolute
+            width: 60px
+            height: 55px
+            left: -70px
+            top: 5px
+            opacity: 0.2
+            color: $bg-light
+            font-size: 179px
+            font-weight: 400
+            line-height: 28px
         
-    &::after
-        content: "“"
-        position: absolute
-        width: 60px
-        height: 55px
-        right: 71px
-        bottom: -90px
-        opacity: 0.2
-        color: $bg-light
-        font-size: 179px
-        font-weight: 400
-        line-height: 28px
+    &:nth-of-type(2)
+        &::after
+            content: "“"
+            position: absolute
+            width: 60px
+            height: 55px
+            right: -60px
+            bottom: -95px
+            opacity: 0.2
+            color: $bg-light
+            font-size: 179px
+            font-weight: 400
+            line-height: 28px
 
 .quote__author
     height: 18px
@@ -61,3 +66,30 @@
         top: 0
         left: 0
 
+
+// ----------------------------------------
+
+
+@media screen and ( max-width: $tablet-width )
+
+    .quote__text
+        font-size: 18px
+
+    .quote__quotes
+        position: relative
+
+        &:nth-of-type(1)
+            &::before
+                width: 60px
+                height: 55px
+                left: -50px
+                top: 5px
+                font-size: 100px
+            
+        &:nth-of-type(2)
+            &::after
+                width: 60px
+                height: 55px
+                right: -50px
+                bottom: -65px
+                font-size: 100px
