--- a/src/sass/index/blocks/services.sass
+++ b/src/sass/index/blocks/services.sass
@@ -1,10 +1,12 @@
+.section-services
+    width: 100%
+    
 .services__container
     padding-top: 54px
-    padding-bottom: 10px
+    padding-bottom: 50px
 
 .services__list
     width: 100%
-    height: 367px
     display: flex
     flex-wrap: wrap
     justify-content: space-between
@@ -12,35 +14,16 @@
 
 .services__item
     display: flex
-    position: relative
 
-    &:nth-child(1) .services__wrapper::before
-        background-image: url('../img/laptop.png')
-    &:nth-child(2) .services__wrapper::before
-        background-image: url('../img/paints.png')
-    &:nth-child(3) .services__wrapper::before
-        background-image: url('../img/tablet.png')
-    &:nth-child(4) .services__wrapper::before
-        background-image: url('../img/computer.png')
-    &:nth-child(5) .services__wrapper::before
-        background-image: url('../img/twoСomputers.png')
-    &:nth-child(6) .services__wrapper::before
-        background-image: url('../img/window.png')
+    &:nth-child(-n+3)
+        margin-bottom: 60px
+        
+
+.services__img
+    margin-right: 20px
 
 .services__wrapper
     text-align-last: left
-    padding-left: 85px
-
-    &::before
-        content: ""
-        width: 60px
-        height: 60px
-        position: absolute
-        top: 0
-        left: 0
-        margin-top: 2px
-        background-repeat: no-repeat
-        background-position: top center
 
 .services__headline
     position: relative
@@ -58,3 +41,30 @@
 
 .services__text
     width: 210px
+
+
+// ----------------------------------------
+
+
+@media screen and ( max-width: $desktop-width )
+
+    .services__container
+        padding-left: 20px
+        padding-right: 20px 
+
+    .services__item
+        flex-basis: 50%
+        justify-content: center
+        margin-bottom: 40px
+        
+        &:nth-child(-n+3)
+            margin-bottom: 40px
+
+    
+
+
+@media screen and ( max-width: $tablet-width )
+
+    .services__item
+        flex-basis: 100%
+
