--- a/src/sass/index/blocks/team.sass
+++ b/src/sass/index/blocks/team.sass
@@ -1,15 +1,11 @@
-.team__container
-    box-sizing: content-box
-    padding: 0
+.section-team
     padding-top: 60px
-    padding-bottom: 58px
+
 
 .slider
-    width: 1200px
-    padding-left: 130px
-    padding-right: 130px
+    width: 100%
     padding-top: 50px
-    padding-bottom: 44px
+    padding-bottom: 50px
     margin-top: 60px
     background-color: $bg-dark
     position: relative
@@ -24,41 +20,23 @@
         background-color: $bg-dark
         transform: translate(-50%) rotate(45deg)
 
+.slider__container
+    max-width: 966px
+    padding: 0
+
 .slider__wrapper
-    display: flex
-    justify-content: space-between
-    box-sizing: content-box
-    position: relative
 
 .slider__item
-    width: 300px
+    margin: 0 11px
 
-.slider__control
-
-    &::before
-        content: ""
-        position: absolute
-        top: 46%
-        transform: translate(-50%)
-        width: 17px
-        height: 25px
-        background-repeat: no-repeat
-        background-position: center center
-
-    &_left
-
-        &::before  
-            left: 77px 
-            background-image: url('../img/icons/ArrowSlider.svg')
-
-    &_right
     
-        &::before  
-            right: 77px
-            background-image: url('../img/icons/ArrowSlider.svg')
-            transform: rotate(180deg)
 
 // ----------------------------------------
+
+// arrows and dots style in slick-theme.sass
+
+// ----------------------------------------
+
 
 .card
     background-color: $main-bg
@@ -98,21 +76,20 @@
     margin-left: 18px
 
 
+
 // ----------------------------------------
 
-.slider__indicators
-    display: flex
-    justify-content: center
-    margin-top: 22px
 
-.indicators__item
-    width: 10px
-    height: 10px
-    border-radius: 50%
-    background-color: $inactive-carousel
 
-    &:not(:first-child)
-        margin-left: 10px
+@media screen and ( max-width: 1050px )
 
-    &_active
-        background-color: $main-bg
+    .slider__container
+        max-width: 644px
+
+@media screen and ( max-width: $tablet-width )
+
+    .slider__container
+        max-width: 300px
+
+    .slider__item
+        margin: 0
