--- a/src/sass/index/index.sass
+++ b/src/sass/index/index.sass
@@ -7,6 +7,8 @@
 @import blocks/services
 @import blocks/quote
 @import blocks/team
+@import blocks/slick-theme
+@import blocks/slick
 @import blocks/portfolio
 @import blocks/contact
 @import blocks/footer
