--- a/src/sass/index/blocks/common.sass
+++ b/src/sass/index/blocks/common.sass
@@ -3,17 +3,12 @@
     width: 100%
     max-width: 940px
     margin: 0 auto
-    padding: 0 10px
 
-// @media screen and ( max-width: $desktop-width )
+@media screen and ( max-width: $desktop-width )
 
-//     .container
-//         max-width: 900px
+    .container
+        padding: 0 10px
 
-
-// @media screen and ( max-width: $tablet-width: 768px )
-    
-    
     
 // ----------------------------------------
     
@@ -23,11 +18,7 @@
     margin: 0 auto
 
 // ----------------------------------------    
-
-// .page-header, .section-menu, .section-about, .section-services, .section-quote, .section-team, .section-portfolio, .section-contacts, .page-footer
-//     padding: 0 10px
-
-// ----------------------------------------    
+  
     
 .logo
     
