--- a/src/sass/index/blocks/footer.sass
+++ b/src/sass/index/blocks/footer.sass
@@ -17,14 +17,24 @@
 
 .arrow_up
     text-align: center
-    flex-grow: 1
-    flex-basis: 0
+
+.arrow_up__img
+    transition: 0.3s
+
+    &:hover
+        filter: brightness(1.2)
 
 .footer__social
     margin-right: 0
     justify-content: flex-end
     flex-grow: 1
     flex-basis: 0
+
+.social__link__dark
+    transition: 0.3s
+
+    &:hover
+        filter: brightness(1.2)
 
 
 // ----------------------------------------
