--- a/src/sass/index/blocks/menu.sass
+++ b/src/sass/index/blocks/menu.sass
@@ -42,6 +42,7 @@
 .main-nav__link
     color: $main-menu
     font-size: 14px
+    transition: 0.3s
 
     &:hover
         color: $title
@@ -52,11 +53,9 @@
 // ----------------------------------------
 
 .social
-    width: 100px
     height: 30px
     display: flex
     align-items: center
-    margin-right: 29px
 
 .social__item
     display: block
@@ -70,6 +69,10 @@
 .social__link
     font-size: 1px
     vertical-align: top
+    transition: 0.3s
+
+    &:hover
+        filter: brightness(0.8)
 
 
 // ----------------------------------------
