--- a/src/sass/index/blocks/team.sass
+++ b/src/sass/index/blocks/team.sass
@@ -42,6 +42,12 @@
     background-color: $main-bg
     height: 300px
 
+.card__link
+    transition: 0.3s
+    
+    &:hover
+        filter: brightness(0.8)
+
 .card__img
     display: block
     height: 225px
@@ -74,6 +80,12 @@
 
 .card__item
     margin-left: 18px
+
+.card__icon
+    transition: 0.3s
+
+    &:hover
+        filter: brightness(0.8)
 
 
 
