--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -27,5 +27,6 @@ $main-font: "Open Sans", Arial, Helvetica, sans-serif
 
 // ----------------------------------------
 
+$mobile-width: 320px
 $tablet-width: 768px
 $desktop-width: 950px
