--- a/src/sass/index/blocks/contact.sass
+++ b/src/sass/index/blocks/contact.sass
@@ -60,7 +60,6 @@
 .contacts__wrapper
     position: absolute
     width: 960px
-    min-height: 660px
     padding-top: 39px
     padding-right: 50px
     padding-bottom: 50px
@@ -125,6 +124,11 @@
     font-size: 14px
     font-weight: 700
     line-height: 26px
+    transition: 0.3s
+
+    &:hover
+        background-color: $light-bg
+
 
 // ----------------------------------------
 
@@ -162,6 +166,8 @@
     margin-left: 30px
 
 .contactinfo__contacts
+    word-wrap: break-word
+    max-width: 208px
     display: inline-block
     color: $title
     font-size: 18px
