--- a/src/sass/index/blocks/services.sass
+++ b/src/sass/index/blocks/services.sass
@@ -3,21 +3,20 @@
     
 .services__container
     padding-top: 54px
-    padding-bottom: 50px
 
 .services__list
     width: 100%
     display: flex
     flex-wrap: wrap
-    justify-content: space-between
+    justify-content: center
     margin-top: 53px
 
 .services__item
     display: flex
-
-    &:nth-child(-n+3)
-        margin-bottom: 60px
-        
+    padding: 0 7px
+    justify-content: center
+    width: 290px
+    margin-bottom: 50px        
 
 .services__img
     margin-right: 20px
@@ -64,6 +63,10 @@
 
 
 @media screen and ( max-width: $tablet-width )
+
+
+    .services__list
+        padding-bottom: 14px
 
     .services__item
         flex-basis: 100%
