--- a/src/sass/index/blocks/contact.sass
+++ b/src/sass/index/blocks/contact.sass
@@ -216,6 +216,9 @@
 
     // ----------------------------------------
 
+    .form
+        padding-top: 15px
+    
     .form__wrapper
         align-items: center
 
@@ -243,8 +246,9 @@
         text-align: center
 
     .contactinfo__list
+        margin: auto
+        max-width: 300px
         margin-top: 20px
-        align-items: center
 
     .contactinfo__item
         align-items: center
