--- a/src/sass/index/blocks/portfolio.sass
+++ b/src/sass/index/blocks/portfolio.sass
@@ -7,7 +7,6 @@
 .portfolio__filter
     display: flex
     justify-content: center
-    margin: 0 auto
     margin-top: 41px
 
 .filter__item
@@ -135,17 +134,17 @@
 @media screen and ( max-width: $tablet-width )
 
     .portfolio__filter
-        justify-content: center
         flex-wrap: wrap
         margin-top: 20px
 
     .filter__item
         display: inline
+        margin: 0 !important
         padding: 0 10px
         padding-bottom: 10px
 
     .portfolio__list
-        margin-top: 20px
+        margin-top: 30px
 
     .portfolio__item
         width: 50%
