--- a/src/sass/index/blocks/quote.sass
+++ b/src/sass/index/blocks/quote.sass
@@ -73,6 +73,11 @@
 
 @media screen and ( max-width: $tablet-width )
 
+    .quote__container
+        // padding: 10px
+        padding-left: 30px
+        padding-right: 30px
+
     .quote__text
         font-size: 18px
 
