--- a/src/sass/index/blocks/team.sass
+++ b/src/sass/index/blocks/team.sass
@@ -98,7 +98,7 @@
     .slider__container
         max-width: 644px
 
-@media screen and ( max-width: $tablet-width )
+@media screen and ( max-width: 650px )
 
     .slider__container
         max-width: 300px
